# global-rust

./: .gitignore  Cargo.toml  build.rs  readme.md
ai/: .gitignore  Cargo.toml
ai/evaluation/: Cargo.toml  readme.md
ai/evaluation/src/: common.rs  demo.rs  lib.rs  main.rs  route.rs  team.rs
ai/evaluation/src/common/: bitfield.rs  color_graph.rs  consts.rs  geometry.rs  graph.rs  mattrix.rs  rectangle.rs  triangle.rs
ai/evaluation/src/route/: pass.rs
ai/evaluation/src/team/: field.rs  link.rs  links.rs  space.rs  traits.rs
ai/src/: evaluation.rs  formation.rs  game.rs  geometry.rs  lib.rs  main.rs  speaker.rs  tree.rs  util.rs
ai/src/evaluation/: bitfield.rs  field.rs  geometry.rs  lib.rs  pass.rs  triangle.rs
ai/src/game/: ball.rs  field.rs  history.rs  plot.rs  robot.rs  scene.rs  shape.rs  traits.rs  tree.rs  vec2rad.rs
ai_speaker/src/: ai_speaker.rs
listener/: Cargo.toml
listener/src/: lib.rs  listener.rs  main.rs  messages_robocup_ssl_geometry.rs  messages_robocup_ssl_wrapper.rs  mod.rs  update.rs  updater.rs
model/: Cargo.toml
model/src/: bitfield.rs  lib.rs  main.rs  model.rs
radio/: Cargo.toml
radio-send/: Cargo.toml
radio-send/src/: radio.rs
radio/src/: lib.rs  main.rs  packet.rs
refbox/: Cargo.toml  build.rs
refbox/proto/: referee.proto
refbox/src/: game_event.rs  lib.rs  main.rs  mod.rs  refbox.rs  referee.rs  updater.rs
robomath/: Cargo.toml
robomath/src/: lib.rs  main.rs  object.rs
src/: arguments.rs  lib.rs  main.rs  receiver.rs  settings.rs  subprograms.rs  viewer.rs
src/listener/: lib.rs  listener.rs  messages_robocup_ssl_geometry.rs  messages_robocup_ssl_refbox_log.rs  messages_robocup_ssl_wrapper.rs  mod.rs
src/message/: messages_robocup_ssl_detection.rs  messages_robocup_ssl_refbox_log.rs  messages_robocup_ssl_wrapper.rs  mod.rs
src/receiver/: grSim_Replacement.rs  lib.rs  messages.rs  messages_robocup_ssl_detection.rs  mod.rs  packet.rs  receiver.rs  replacement.rs
src/receiver/messages/: lib.rs  messages_robocup_ssl_geometry.rs
src/settings/: lib.rs  settings.rs
src/viewer/: field.rs  fps_counter.rs  lib.rs  mod.rs  model.rs  viewer.rs  viewer.ui  viewer.ui~
viewer/: Cargo.toml
viewer/src/: field.rs  fps_counter.rs  info_tree.rs  lib.rs  main.rs  mod.rs  size_mode.rs  viewer.rs  viewer.ui~  widget.rs
vision/: Cargo.toml
vision/src/: lib.rs  listener.rs  main.rs  messages_robocup_ssl_detection.rs  messages_robocup_ssl_refbox_log.rs  mod.rs  updater.rs  vision.rs
