[package]
name = "global"
version = "0.1.0"
authors = ["terurin <hamusutaateru@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members=["vision","model","viewer","refbox"]
[dependencies]
serde = "1.0.101"
serde_json = "1.0.40"
serde_derive ="1.0.101"
glm = "0.2.3"
env_logger = "0.6.2"
log = "0.4.8"
vision={path="vision"}
model={path="model"}
viewer={path="viewer"}
refbox={path="refbox"}
