[package]
name = "global"
version = "0.1.0"
authors = ["terurin <hamusutaateru@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members=["vision","model","viewer","refbox","ai","radio-send"]
[dependencies]
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
glm = {git="https://github.com/tnctinfossl/glm-rs.git"}
env_logger = "0.7.1"
log = "0.4.8"
vision={path="vision"}
model={path="model"}
viewer={path="viewer"}
refbox={path="refbox"}
ai={path="ai"}
radio-send={path="radio-send"}
gnuplot = "0.0.32"
