[package]
name = "ai"
version = "0.1.0"
authors = ["sim0822 <Rsim08@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model={path="../model"}
glm = "0.2.3"
rand = "0.7.2"
rand_xoshiro = "0.4.0"
rand_distr = "0.2.2"
