[package]
name = "radio"
version = "0.1.0"
authors = ["terurin <hamusutaateru@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.103"
serde = "1.0.103"
serde_json = "1.0.44"
glm = {git="https://github.com/tnctinfossl/glm-rs.git"}
log = "0.4.8"
