[package]
name = "refbox"
version = "0.1.0"
authors = ["terurin <hamusutaateru@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protoc-rust = "2.8.1"
[dependencies]
protobuf = "2.8.1"
serde = "1.0.101"
serde_derive = "1.0.101"
model={path="../model"}