[package]
name = "robomath"
version = "0.1.0"
authors = ["terurin <hamusutaateru@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.101"
serde_derive = "1.0.101"
nalgebra-glm = "0.4.2"
gnuplot = "0.0.32"
rand = "0.7.2"
