[package]
name = "viewer"
version = "0.1.0"
authors = ["terurin <hamusutaateru@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model={path="../model"}
gio = "0.7.0"
gtk = "0.7.0"
glm = "0.2.3"
serde = "1.0.101"
serde_json = "1.0.40"
serde_derive = "1.0.101"
gdk = "0.11.0"
cairo-rs = "0.7.1"
glib = "0.8.2"
