[package]
name = "evaluation"
version = "0.1.0"
authors = ["teru <hamusutaateru@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model={path="../../model"}
glm = {git="https://github.com/tnctinfossl/glm-rs.git"}
