[package]
name = "evaluation"
version = "0.1.0"
authors = ["teru <hamusutaateru@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = {git="https://github.com/tnctinfossl/glm-rs.git"}
serde = "1.0.104"
serde_derive = "1.0.104"

