[package]
name = "evaluation"
version = "0.1.0"
authors = ["teru <hamusutaateru@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = {git="https://github.com/tnctinfossl/glm-rs.git"}
serde = "1.0.104"
serde_derive = "1.0.104"
rand = "0.7.3"
gnuplot = "0.0.34"
lazy_static = "1.4.0"
typed-arena = "2.0.1"
rayon = "1.3.0"

